# dioxus-tailwind-embedded-example

./: Cargo.toml  Makefile  README.md  build.rs  package-lock.json  tailwind.config.js
src/: index.css  main.rs
src/app/: dogs.rs  mod.rs  ui.rs
static/: tailwind.css
