[package]
name = "dioxus-tailwind-embedded-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dioxus = "0.3.2"
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
reqwest = { version = "0.11.17", features = ["serde_json", "json"] }
rust-embed = { version = "6.6.1", features = ["axum"] }
serde = "1.0.160"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = "0.4.0"
